--- a/main.html
+++ b/main.html
@@ -1,3 +1,11 @@
 <html>
-
+  <h1>
+    Hello.
+  </h1>
+  <body>
+    <p>I am a student at UC Berkeley studying Economics and Data Science</p>
+  </body>
+  <BLOCKQUOTE>
+  Some of my passions are tennis, food, and learning.
+  <BLOCKQUOTE>
 </html>
